initialSetup/main/default/objects/CRO_Research_Study__c/CRO_Research_Study__c.object-meta.xml
<CustomObject>
    <label>CRO Research Study</label>
    <nameField>
        <displayFormat>CRO-RS-{0000}</displayFormat>
        <label>CRO Research Study Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CRO Research Study</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>