initialSetup/main/default/objects/CRO_Research_Study__c/fields/CRO_Account__c.field-meta.xml
<CustomField>
    <fullName>CRO_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CRO_Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>CRO</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CRO Research Study</relationshipLabel>
    <relationshipName>CRO_Research_Study</relationshipName>
    <type>Lookup</type>
</CustomField>