initialSetup/main/default/objects/CRO_Research_Study__c/fields/Enrolled_Candidate_Count__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_Candidate_Count__c</fullName>
    <label>Enrolled Candidate Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>