initialSetup/main/default/objects/CRO_Research_Study__c/fields/Research_Study__c.field-meta.xml
<CustomField>
    <fullName>Research_Study__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Research Study</label>
    <referenceTo>Research_Study__c</referenceTo>
    <relationshipLabel>CRO Research Study</relationshipLabel>
    <relationshipName>CRO_Research_Study</relationshipName>
    <type>Lookup</type>
</CustomField>